--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "test": "standard",
-    "build": "webpack js/ClientApp.js public/bundle.js"
+    "build": "webpack",
+    "watch": "webpack --watch"
   },
   "dependencies": {
     "axios": "0.15.2",
@@ -47,7 +48,7 @@
     "react-addons-test-utils": "15.3.2",
     "react-test-renderer": "15.3.2",
     "style-loader": "0.13.1",
-    "webpack": "2.1.0-beta.25",
+    "webpack": "^2.1.0-beta.22",
     "webpack-dev-server": "1.16.2"
   },
   "directories": {
